--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/BattleBlocks/BattleBlocks#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^5.0.5"
+    "mongoose": "^5.0.5",
+    "router": "^1.3.2"
   }
 }
