--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "axios": "^0.17.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "mongoose": "^5.0.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "router": "^1.3.2"
   }
 }
