--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Battle blocks project 3",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"node server.js\" \"yarn start\""
   },
   "repository": {
     "type": "git",
@@ -16,16 +20,29 @@
     "url": "https://github.com/BattleBlocks/BattleBlocks/issues"
   },
   "homepage": "https://github.com/BattleBlocks/BattleBlocks#readme",
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "axios": "^0.17.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^4.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-mongo": "^2.0.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "router": "^1.3.2"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "concurrently": "^3.5.1"
   }
 }
