--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
   "homepage": "https://github.com/BattleBlocks/BattleBlocks#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.18.2",
+    "connect-mongo": "^2.0.1",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.0.1",
+    "mongoose": "^5.0.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.8.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.2",
-    "connect-mongo": "^2.0.1",
-    "cookie-parser": "^1.4.3",
-    "express": "^4.16.2",
-    "express-session": "^1.15.6",
-    "mongoose": "^5.0.5",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
     "router": "^1.3.2"
   },
   "devDependencies": {
