--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
+    "firebase": "^4.10.1",
     "mongoose": "^5.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
