--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
+    "json-to-table": "^4.0.0",
     "mongoose": "^5.0.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-json-table": "^0.1.1",
     "react-modal": "^3.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-table": "^6.8.0",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^4.8.0",
     "router": "^1.3.2"
