--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport-local": "^1.0.0",
     "re-base": "^3.2.2",
     "react": "^16.2.0",
+    "react-center": "^1.1.1",
     "react-dom": "^16.2.0",
     "react-modal": "^3.3.1",
     "react-router-dom": "^4.2.2",
