--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "re-base": "^3.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-charts": "^1.5.5",
     "react-modal": "^3.3.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
