--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "express-validator": "^5.0.1",
     "firebase": "^4.10.1",
     "mongoose": "^5.0.5",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "re-base": "^3.2.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.8",
     "react-json-table": "^0.1.1",
     "react-modal": "^3.3.1",
     "react-router-dom": "^4.2.2",
