--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@
 
 # misc
 .DS_Store
+.vscode
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.firebaserc
 
 npm-debug.log*
 yarn-debug.log*
