--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
     "firebase": "^4.10.1",
+    "moment": "^2.21.0",
     "mongoose": "^5.0.5",
     "multer": "^1.3.0",
     "passport": "^0.4.0",
@@ -41,6 +42,7 @@
     "react-dropzone": "^4.2.8",
     "react-json-table": "^0.1.1",
     "react-modal": "^3.3.1",
+    "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-table": "^6.8.0",
