--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/BattleBlocks/BattleBlocks.git"
   },
-  "author": "",
+  "author": "Northwestern",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/BattleBlocks/BattleBlocks/issues"
