--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Battle blocks project 1",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"react-scripts build\" \"node server.js\"",
+    "start": "concurrently \"react-scripts start\" \"node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -47,9 +47,9 @@
     "react-transition-group": "^2.2.1",
     "react-transitions": "^1.0.0",
     "reactstrap": "^4.8.0",
-    "router": "^1.3.2"
+    "router": "^1.3.2",
+    "concurrently": "^3.5.1"
   },
   "devDependencies": {
-    "concurrently": "^3.5.1"
   }
 }
