--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Battle blocks project 1",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "start": "concurrently \"react-scripts dev\" \"node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
