--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "Battle blocks project 3",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently --kill-others-on-fail \"node ./server/server.js\" \"yarn start\"",
+    "heroku-postbuild": "yarn build"
   },
   "proxy": "http://localhost:8080",
   "repository": {
@@ -25,6 +27,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-mongodb-session": "^1.4.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^5.0.1",
@@ -34,6 +37,7 @@
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "path": "^0.12.7",
     "re-base": "^3.2.2",
     "react": "^16.2.0",
     "react-center": "^1.1.1",
