--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "concurrently \"react-scripts start\" \"nodemon server/server.js\"",
-    "prod": "export NODE_ENV=\"production\" && nodemon server/server.js"
+    "prod": "export NODE_ENV=\"production\" && nodemon server/server.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "proxy": "http://localhost:3001",
   "repository": {
