--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "battleblocks",
   "version": "1.0.0",
+  "private": true,
   "description": "Battle blocks project 3",
   "main": "server.js",
   "scripts": {
-    "start": "export NODE_ENV=\"production\" && node server/server.js",
+    "start": "cross-env NODE_ENV=production node index.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
