--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Battle blocks project 1",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"react-scripts dev\" \"node server.js\"",
+    "start": "concurrently \"react-scripts build\" \"node server.js\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/BattleBlocks/BattleBlocks#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "connect-mongodb-session": "^1.4.0",
@@ -47,9 +48,9 @@
     "react-transition-group": "^2.2.1",
     "react-transitions": "^1.0.0",
     "reactstrap": "^4.8.0",
-    "router": "^1.3.2",
-    "concurrently": "^3.5.1"
+    "router": "^1.3.2"
   },
   "devDependencies": {
+    "concurrently": "^3.5.1"
   }
 }
