--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "battleblocks",
   "version": "1.0.0",
+  "private": true,
   "description": "Battle blocks project 1",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"react-scripts dev\" \"node server.js\"",
+    "start": "export NODE_ENV=\"production\" && node server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "concurrently \"react-scripts start\" \"node server.js\"",
     "prod": "export NODE_ENV=\"production\" && nodemon server/server.js",
-    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+    // "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "proxy": "http://localhost:3001",
   "repository": {
@@ -57,6 +58,7 @@
     "router": "^1.3.2"
   },
   "devDependencies": {
-    "concurrently": "^3.5.1"
+    "concurrently": "^3.5.1",
+    "react-scripts": "^1.1.1"
   }
 }
