--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "concurrently \"react-scripts start\" \"node server.js\"",
-    "prod": "export NODE_ENV=\"production\" && nodemon server/server.js",
+    "prod": "export NODE_ENV=\"production\" && nodemon server/server.js"
   },
   "proxy": "http://localhost:3001",
   "repository": {
