--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-cli": "^6.26.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "concurrently": "^3.5.1",
     "connect-mongodb-session": "^1.4.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
