--- a/package.json
+++ b/package.json
@@ -4,25 +4,7 @@
   "private": true,
   "description": "Battle blocks project 1",
   "main": "server.js",
-  "scripts": {
-    "start": "concurrently \"react-scripts start\" \"node server.js\"",
-    "build": "react-scripts build",
-    "test": "set NODE_ENV=\"production\" && node server.js",
-    "eject": "react-scripts eject",
-    "dev": "concurrently \"react-scripts start\" \"node server.js\"",
-    "prod": "set NODE_ENV=\"production\" && nodemon server.js"
-  },
   "proxy": "http://localhost:3001",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BattleBlocks/BattleBlocks.git"
-  },
-  "author": "Northwestern",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BattleBlocks/BattleBlocks/issues"
-  },
-  "homepage": "https://github.com/BattleBlocks/BattleBlocks#readme",
   "dependencies": {
     "axios": "^0.17.1",
     "babel-cli": "^6.26.0",
@@ -56,8 +38,20 @@
     "reactstrap": "^4.8.0",
     "router": "^1.3.2"
   },
+  "scripts": {
+    "heroku-postbuild": "yarn build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "dev": "concurrently --kill-others-on-fail \"nodemon ./server/server.js\" \"yarn start\""
+  },
   "devDependencies": {
     "concurrently": "^3.5.1",
-    "react-scripts": "^1.1.1"
+    "react-scripts": "^1.1.1",
+    "nodemon": "^1.15.1"
+  },
+  "engines": {
+    "yarn": ">=1.3.2"
   }
 }
