--- a/package.json
+++ b/package.json
@@ -39,12 +39,12 @@
     "router": "^1.3.2"
   },
   "scripts": {
-    "heroku-postbuild": "yarn build",
+    "postinstall": "webpack -p",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev": "concurrently --kill-others-on-fail \"nodemon ./server/server.js\" \"yarn start\""
+    "dev": "concurrently --kill-others-on-fail \"nodemon server.js\" \"yarn start\""
   },
   "devDependencies": {
     "concurrently": "^3.5.1",
