--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "router": "^1.3.2"
   },
   "scripts": {
-    "postinstall": "webpack -p",
+    "heroku-postbuild": "yarn build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
